@@ -352,6 +352,7 @@ Filters:
   avf_showcqt.c                         Muhammad Faiz
   vf_blend.c                            Paul B Mahol
   vf_colorbalance.c                     Paul B Mahol
+  vf_colorkey.c                         Timo Rothenpieler
   vf_dejudder.c                         Nicholas Robbins
   vf_delogo.c                           Jean Delvare (CC <khali@linux-fr.org>)
   vf_drawbox.c/drawgrid                 Andrey Utkin
